--- a/index.html
+++ b/index.html
@@ -11,3 +11,7 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+<!-- <footer>
+  <p>© 2025 Vamonos Pest Control - Practice Project for Educational Purposes</p>
+</footer> -->
